Fixed wrapping of kudos amount (#34)
* Fixed wrapping of kudos amount

* Update Header.scss

--- a/src/modules/feed/components/Transaction/Header/Header.scss
+++ b/src/modules/feed/components/Transaction/Header/Header.scss
@@ -4,7 +4,7 @@
 }
 
 .kudo_amount {
-    width: 45px;
+    width: 4rem;
 }
 
 .image_wrapper {
